# Red-Install-Tests

./: .cirrus.star  .cirrus.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_java_version.py  generate_imports.py  pyproject.toml  run_tests.py  windows_install_instructions.ps1
.github/workflows/: daily_install_tests_dev.yaml  daily_install_tests_stable.yaml  install_instructions.yaml  scheduled_test.yaml  test_install_instructions.yaml  type_check.yaml
src/red_install_tests/: cli.py  http.py  image_location.py  job_config.py  run_config.py
src/red_install_tests/cmd/: __main__.py  build.py  build_all.py  configure_run.py  create_job.py  download_builder_requirements.py  download_image.py  download_red_repo.py  generate_os_matrix.py  prepare_build_dir.py  prepare_raspi_img.py
src/red_install_tests/resources/: __init__.py  builder_requirement_file_checksums.json
src/red_install_tests/resources/packer/: common.pkr.hcl  qemu.pkr.hcl  ssh.pkr.hcl  tart.pkr.hcl
src/red_install_tests/resources/tests/: check_java_version.py  generate_imports.py  run_tests.py
src/red_install_tests/resources/tests/extension-project/: setup.py
src/red_install_tests/resources/windows/: autounattend.xml  firstlogin.ps1
