[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "Red-Install-Tests"
dynamic = ["version"]
description = "Test harness for running Red's installation instructions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jakub Kuczys", email = "me@jacken.men" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "lxml",
    "niquests[http3,speedups]",
    "platformdirs",
    "rich",
    "typing-extensions",
]

[project.scripts]
red-install-tests = "red_install_tests.cmd.__main__:main"

[project.urls]
Documentation = "https://github.com/Jackenmen/Red-Install-Tests#readme"
Issues = "https://github.com/Jackenmen/Red-Install-Tests/issues"
Source = "https://github.com/Jackenmen/Red-Install-Tests"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
python = "3.10"

[tool.hatch.envs.default.env-vars]
PATH = "{root}{/}deps{/}bin{;}{env:PATH}"

[tool.hatch.envs.default.scripts]
configure-run = "red-install-tests configure-run --run-dir {root}{/}os-build-run {args}"
download-red-repo = "red-install-tests download-red-repo --run-dir {root}{/}os-build-run {args}"
generate-os-matrix = "red-install-tests generate-os-matrix --run-dir {root}{/}os-build-run {args}"
create-job = "red-install-tests create-job --run-dir {root}{/}os-build-run {args}"
download-builder-requirements = "red-install-tests download-builder-requirements --deps-dir {root}{/}deps {args}"

[tool.hatch.envs.hatch-check-types]
dependencies = ["ty", "Red-DiscordBot", "setuptools", "types-lxml"]

[tool.hatch.envs.hatch-check-types.scripts]
check = "ty check"

[tool.ruff]
line-length = 99

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    # pyflakes rules
    "F",
    # pycodestyle rules
    "E",
    "W",
    # import sorting
    "I",
    # pyupgrade rules
    "UP",
    # flake8-bugbear rules
    "B",
    # flake8-bandit rules
    "S",
    # builtin shadowing rules
    "A",
    # unused arguments
    "ARG",
    # refurb rules
    "FURB",
    "FURB148",  # unnecessary-enumerate (in preview)
    # flake8-simplify rules
    "SIM",
    # flake8-logging rules
    "LOG",
    # flake8-logging-format rules
    "G",
    # flake8-comprehensions rules
    "C4",
    # "boolean trap" rules
    "FBT",
    # disallow implicitly concatenated strings on a single line
    # and explicitly concatenated strings
    "ISC",
    # perflint rules
    "PERF",
    # pygrep-hooks rules
    "PGH",
    # flake8-pie rules
    "PIE",
    # flake8-return rules
    "RET",
    # collection of rules unique to Ruff
    "RUF",
    # leftover `breakpoint()`
    "T100",
    # flake8-tidy-imports rules
    "TID",
]
ignore = [
    # setattr is needed to make type checkers happy when creating new attributes on objects
    "B010",
    # disable __all__ sorting
    # see https://github.com/astral-sh/ruff/issues/20952
    "RUF022",
    # `assert` is expected to be used in code (to appease type checkers)
    "S101",
    # in general, this rule makes sense but it doesn't really make sense to apply for our use
    "S103",
    # we already take care to use extraction filter on the archive so this just results
    # in annoying false positives
    "S202",
    # the idea of checking untrusted input is not a bad one but this is prone to false positives
    "S603",
    # checking for absolute paths is way too strict for what we're doing
    "S607",
    # `contextlib.suppress()` is slower than `try-except-pass`
    "SIM105",
]
preview = true
explicit-preview-rules = true

[tool.ruff.per-file-target-version]
# Override the project-wide Python version for a developer scripts directory:
"src/red_install_tests/resources/tests/*.py" = "py38"

[tool.ruff.lint.isort]
combine-as-imports = true
